--- a/StopWatchProject/StopWatchProject/StopWatchProject.csproj
+++ b/StopWatchProject/StopWatchProject/StopWatchProject.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\background.jpg" />
+    <Content Include="Assets\Square71x71Logo.scale-400.jpg" />
     <Content Include="Assets\Square71x71Logo.scale-400.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
